# langchain-projects

./: .gitignore  README.md  an.py  chains.py  example.py  ingestion.py  main.py  mock.py  nodes.py  pyproject.toml  query_vdb.py  react.py  schema.py  schemas.py
backend/: core.py
graph/chains/: chains.py
graph/chains/tests/: test_chains.py
graph/nodes/: retrieve.py  web_search.py
